; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_farsi.c_chg_r_to_Xor_X_.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_farsi.c_chg_r_to_Xor_X_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@curwin = common dso_local global %struct.TYPE_4__* null, align 8
@p_ri = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @chg_r_to_Xor_X_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chg_r_to_Xor_X_() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curwin, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %27

8:                                                ; preds = %0
  %9 = load i32, i32* @p_ri, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %8
  %12 = call i32 (...) @dec_cursor()
  br label %13

13:                                               ; preds = %11, %8
  %14 = call i32 (...) @gchar_cursor()
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @toF_Xor_X_(i32 %15)
  store i32 %16, i32* %2, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @put_and_redo(i32 %19)
  br label %21

21:                                               ; preds = %18, %13
  %22 = load i32, i32* @p_ri, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %21
  %25 = call i32 (...) @inc_cursor()
  br label %26

26:                                               ; preds = %24, %21
  br label %27

27:                                               ; preds = %26, %0
  ret void
}

declare dso_local i32 @dec_cursor(...) #1

declare dso_local i32 @gchar_cursor(...) #1

declare dso_local i32 @toF_Xor_X_(i32) #1

declare dso_local i32 @put_and_redo(i32) #1

declare dso_local i32 @inc_cursor(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
